<resources>
    <string name="app_name">DevFest SPb</string>
    <string name="name">Kotlin-friendly Annotation Processing</string>
    <string name="android">Android</string>
    <string name="lecturer">Sergey Ryabov</string>
    <string name="description_of_the_report">Рекламируя вашему другу Kotlin, как замену Java, наверняка первым
        аргументом будет тот самый синтаксический сахар, от которого мы получаем профит каждый день: поддержка
        nullability из коробки, аргументы по умолчанию, свойства-делегаты, data и sealed классы и т.д. Но если нам
        понадобится прикрутить к проекту процессор аннотаций, то, к сожалению, вся информация, которую получится собрать
        о нашем коде, будет Java-специфична, а Kotlin-фичи останутся незамеченными. В этом докладе мы выясним, как
        использовать метаданные, добавляемые Kotlin-компилятором к коду, чтобы получить информацию об использованных
        особенностях языка, и как использовать её во время обработки аннотаций.
    </string>
    <string name="button_all_reports">Следующий доклад</string>
    <string name="schedule_of_reports">О докладчике</string>

    <string name="name_rmr">Нашёл. Увидел. Запилил</string>
    <string name="lecturer_rmr">Konstantin Tskhovrebov</string>
    <string name="description_of_the_report_rmr">Я был впечатлен представленным на Goggle IO motion Layout, поэтому
        решил
        изучить его в бою и рассказать о практическом использовании вам. Я пошёл на Dribbble.com и выбрал понвавившуюся
        анимацию. Теперь я сделаю всё, чтобы реализовать её, используя MotionLayout, и расскажу о фичах и проблемах
        аудитории.
    </string>

    <string name="name_ArturVasilov">Как мы ускоряем Яндекс под Android</string>
    <string name="lecturer_ArturVasilov">Artur Vasilov</string>
    <string name="description_of_the_report_ArturVasilov">Многие Android-разработчики знают стандартные методы
        профилирования приложений, инструменты для отладки и улучшения производительности. Однако для случая больших
        приложений этого не всегда достаточно. Мы поговорим о нестандартных способах ускорения работы приложения,
        затронем самые разные аспекты, как вопросы UI, так и инструментов и околосерверных вещей. Я надеюсь, что этот
        доклад заставит вас посмотреть на вопросы производительности по-новому и подумать о том, что вы можете сделать в
        своем приложении.
    </string>

    <string name="name_AE">D8/R8 vs DX/Proguard</string>
    <string name="lecturer_AE">Alexander Efremenkov</string>
    <string name="description_of_the_report_AE">В Android тулчейн добавили новый компилятор - D8 (Dope 8), который
        позволяет компилировать быстрее, чем DX, и иметь наименьший итоговый размер apk, а также R8 - замена ProGuard. В
        этом докладе постараемся разобраться в этих новинках, а также сравним и поймём, как компилирует D8 против
        старого доброго DX, зачем сделали второй ProGuard и насколько это всё стабильно.
    </string>

    <string name="name_ES">Aviasales Отели - практический опыт объединения двух приложений</string>
    <string name="lecturer_ES">Evgeny Shishkin</string>
    <string name="description_of_the_report_ES">До недавнего времени у нас независимо существовало два приложения:
        Aviasales — метапоиск авиабилетов и Hotellook — метапоиск отелей/хостелов/аппартов. И все было хорошо, пока не
        появилась задача интегрировать возможность поиска и бронирования отелей в приложение Aviasales, для того чтобы
        увеличить конверсию пользователей в отельную часть и зарабатывать еще больше денег 😁 Так как Aviasales и
        Hotellook — это совершенно разные проекты с разными командами, разными архитектурными подходами, задача эта
        оказалась весьма непростой и интересной. Спойлер: В результате объединения приложения свет увидели 2 любопытные
        open source библиотеки: mrButler и nautilus.
    </string>

    <string name="name_RK">Поддержка офлайна в мобильном приложении. Синхронизация</string>
    <string name="lecturer_RK">Ruslan Kalbaev</string>
    <string name="description_of_the_report_RK">Поддержка офлайна в мобильном приложении - нетривиальная задача, решение
        которой позволяет вывести приложение на качественно иной уровень. В докладе будет представлена теоретическая
        часть проблемы и одно из ее практических решений.
    </string>

    <string name="mobile_consultant">Mobile Consultant</string>
    <string name="digital_nomand_russia">Digital Nomand, Russia</string>
    <string name="description_work_sergey">
        <![CDATA[Currently Sergey is an independent Android Engineer and Consultant with the background in backend dev. Co-organiser of the first Kotlin User Group in Russia and Android Academy in St. Petersburg and Moscow, usually speaks about Kotlin & Android. Kotlin early adopter, digital nomad.]]></string>

    <string name="room_1">Room 1</string>
    <string name="time_11_15">11:15</string>
    <string name="data">27 november</string>
    <string name="work_AE">System Android developer at Yandex.Taxi</string>
    <string name="moscow_russia">Moscow, Russia</string>
    <string name="description_AE_prifile">Пишу код, смотрю в Android.</string>
    <string name="_12_25">12:25</string>
    <string name="senior_android_developer_at">Senior Android Developer at Яндекс</string>
    <string name="st_petersburg_russia">St. Petersburg, Russia</string>
    <string name="description_ArturVasilov">Android Developer with over five years of professional experience and love
        of creating extremely high-quality apps with perfect UI / UX and optimizations. Working at Yandex. GDG Leader.
    </string>
    <string name="_15_25">15:25</string>
    <string name="android_developer_at_aviasales">Android Developer at Aviasales</string>
    <string name="description_ES">Android-разработчик с опытом более 8 лет. Адаптировал телефоны LG под российский
        рынок, разрабатывал умного ассистента в i-Free и амбициозный аудиогид izi.TRAVEL. В 2016 году присоеденился к
        команде Aviasales, где разрабатывает приложение Hotellook для поиска лучших цен на отели. Автор популярных
        android open-source проектов (RobotoTextView, AppMsg, ProgressFragment, Snowfall, MultiBackStack и т.д.)
    </string>
    <string name="_16_35">16:35</string>
    <string name="senior_developer_at_redmadrobot">Senior Developer at Redmadrobot</string>
    <string name="description_Konstantin">Graduated from SPBGPU, Konstantin used to be fond of microcontrollers and
        circuitry. He has started coding for android platform since 2.2 version had been released. Today, Kostya is an
        architect in the St. Petersburg team Redmadrobot.
    </string>
    <string name="_17_45">17:45</string>
    <string name="android_developer_at_redmadrobot">Android Developer at Redmadrobot</string>
    <string name="description_RK">Разрабатываю под Android чуть больше 4-х лет. Исследую и решаю сложные технические
        задачи. Закончил Томский государственный университет, факультет информатики. Адепт кафедры программной
        инженерии.
    </string>
    <string name="_13_35">13:35</string>
</resources>