<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.MainActivity">


        <TextView
                android:id="@+id/report_title_ES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_ES"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
        />

        <TextView
                android:id="@+id/platform_ES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textSize="23sp"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:padding="7dp"
                android:layout_below="@id/report_title_ES"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
        />

        <TextView
                android:id="@+id/lecturer_ES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecturer_ES"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_below="@id/platform_ES"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"

        />


        <TextView
                android:id="@+id/description_of_the_report_ES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_of_the_report_ES"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/lecturer_ES"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:textSize="15sp"
        />

        <Button
                android:id="@+id/button_all_reports_ES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_all_reports"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentStart="true"
                android:padding="15dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/description_of_the_report_ES"

        />

        <Button
                android:id="@+id/schedule_of_reports_ES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_of_reports"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:padding="15dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/description_of_the_report_ES"
        />


    </RelativeLayout>
</ScrollView>
