<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".lectures_activity.SergeyRyabovProfile"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
    >

        <ImageView
                android:id="@+id/image_sergey"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/evgenyshishkin"
                tools:ignore="ContentDescription"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
                android:id="@+id/name_lecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecturer_ES"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_sergey"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/work_lecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/android_developer_at_aviasales"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorname"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/image_sergey"
                app:layout_constraintTop_toBottomOf="@id/name_lecturer"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/st_petersburg_russia"
                app:layout_constraintStart_toEndOf="@id/image_sergey"
                app:layout_constraintTop_toBottomOf="@id/work_lecturer"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/description_work_sergey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_ES"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/image_sergey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorView"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/description_work_sergey"

        />

        <TextView
                android:id="@+id/name_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_ES"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toTopOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
                android:id="@+id/room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_1"
                android:layout_marginStart="15dp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/name_report"
                app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
                android:id="@+id/platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textSize="25sp"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:padding="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toBottomOf="@id/room"
                app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16_35"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/platform"
                app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:layout_marginTop="14dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:textColor="@color/colorname"
                app:layout_constraintStart_toEndOf="@id/time"
                app:layout_constraintTop_toBottomOf="@id/platform"

        />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
