<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.SergeyRyabovActivity"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
    >


        <TextView
                android:id="@+id/report_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textSize="23sp"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:padding="7dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/report_title"
                app:layout_constraintStart_toStartOf="parent"

        />

        <TextView
                android:id="@+id/lecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecturer"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/platform"
                app:layout_constraintTop_toBottomOf="@id/platform"
                app:layout_constraintStart_toStartOf="parent"
        />


        <TextView
                android:id="@+id/description_of_the_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_of_the_report"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/lecturer"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/lecturer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <Button
                android:id="@+id/button_all_reports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_all_reports"
                android:layout_alignParentStart="true"
                android:padding="15dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/description_of_the_report"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/description_of_the_report"
                app:layout_constraintStart_toStartOf="parent"
        />

        <Button
                android:id="@+id/schedule_of_reports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_of_reports"
                android:layout_alignParentEnd="true"
                android:padding="15dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/description_of_the_report"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/description_of_the_report"
                app:layout_constraintEnd_toEndOf="parent"
        />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
